my first commit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <p>Technology is the sum of techniques, skills, methods, and processes used in the production of goods or services or in the accomplishment of objectives, such as scientific investigation. Technology can be the knowledge of techniques, processes, and the like, or it can be embedded in machines to allow for operation without detailed knowledge of their workings.</p>
 
-    <p>Systems (e.g. machines) applying technology by taking an input, changing it according to the system's use, and then producing an outcome are referred to as technology systems or technological systems. The simplest form of technology is the development and use of basic tools. The prehistoric discovery of how to control fire and the later Neolithic Revolution increased the available sources of food, and the invention of the wheel helped humans to travel in and control their environment.</p>
+    <p>Systems (e.g. machines) applying technology by taking an no input, changing it according to the system's use, and then producing an outcome are referred to as technology systems or technological systems. The simplest form of technology is the development and use of basic tools. The prehistoric discovery of how to control fire and the later Neolithic Revolution increased the available sources of food, and the invention of the wheel helped humans to travel in and control their environment.</p>
 
     <p>Technological systems, such as computer technology and information technology, have advanced dramatically since the pre-industrial era. In today's world, technology is a vital part of human society and is constantly evolving. It has helped improve communication, transportation, healthcare, education, and many other aspects of life.</p>
 
