my second commit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <p>Technological systems, such as computer technology and information technology, have advanced dramatically since the pre-industrial era. In today's world, technology is a vital part of human society and is constantly evolving. It has helped improve communication, transportation, healthcare, education, and many other aspects of life.</p>
 
-    <p>For more information, you can visit the <a href="https://en.wikipedia.org/wiki/Technology" target="_blank">Technology page on Wikipedia</a>.</p>
+    <p>For more information, you can visit the <a href="https://en.wikipedia.org/wiki/Technology" target="_blank">Technology hi on Wikipedia</a>.</p>
 
 </body>
 </html>
